--- a/12-websockets/02-socketio/public/index.html
+++ b/12-websockets/02-socketio/public/index.html
@@ -10,8 +10,8 @@
     <script src="./script.js" defer></script>
   </head>
   <body class="app column">
-    <header class="header row">
-      <div class="headerWrapper container">
+    <header class="header">
+      <div class="row headerWrapper container">
         <h1 class="title">SocketChat.io</h1>
         <p><a href="./index.html" target="_blank">Open another client ></a></p>
       </div>
@@ -34,7 +34,7 @@
     </main>
 
     <footer class="footer">
-      <form class="row container section" id="chat">
+      <form class="row container" id="chat">
         <input class="inputChat" type="text" id="msg" placeholder="Message" />
         <button class="button" type="submit">Send</button>
       </form>
